discussion/kv_engine/137161/137161_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39292: 1/n set_collections persist current manifest

set_collections only allows 'forward' progress after checking
that the new manifest is a successor of the current manifest,
however after warm-up we have to accept whatever we are given.

This commit updates set_collections so that for persistent buckets
the new manifest is first stored in the database directory and
then we update from that manifest on-success, now warm-up brings
the manifest back from storage and we can validate that further
updates are a valid successor.

Ephemeral buckets just update with no background task.

This patch stores using Manifest::toJSON and reloads JSON using
Manifest's existing construction with no integrity checking.

Change-Id: Ie548e31f56c4847ecf4c0c4ad866544f6bcd2a5c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-10-05 18:27:27.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-05 20:32:06.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4886/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4886/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4886/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30867/ : FAILURE

CMake error: build/tlm/deps/openssl.exploded/CMakeLists.txt:1 (FILE) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30867/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3413/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26683/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6414/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6302/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14076/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5261/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6182/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-10-05 20:58:37.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-10-05 20:58:45.000000000
Message: 
Patch Set 8: Verified+1
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-10-06 10:47:04.000000000
Message: 
Patch Set 8: Code-Review-1

(4 comments)
Line:332, engines/ep/src/collections/manager.h -> Assuming `updateMutex` guards `updateInProgress`, could we use a Synchronized<void*> instead - given that more explicitly documents the scope of the lock?

Line:235, engines/ep/src/ep_bucket.h -> Please can you document this method?

Line:819, engines/ep/src/kv_bucket_iface.h -> ... Actually can just be documented here.

Line:53, engines/ep/src/tasks.def.h -> Make sense for this to be ahead of AccessScanner?

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-10-07 10:11:46.000000000
MISMATCHED INLINE COMMENT
Line:332, engines/ep/src/collections/manager.h -> done - and fixed some return value mess in the update flow
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-10-07 10:11:46.000000000
MISMATCHED INLINE COMMENT
Line:819, engines/ep/src/kv_bucket_iface.h -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-10-07 10:11:46.000000000
MISMATCHED INLINE COMMENT
Line:53, engines/ep/src/tasks.def.h -> Done - also noted I'd made AccessScanner/AccessScannerVisito different - when they were equal priority (fixed)
----------------------------------------------------------------------------------------------------------------------
